--- a/.github/workflows/llvmlite_osx-64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_osx-64_wheel_builder.yml
@@ -49,8 +49,15 @@ jobs:
           restore-keys: |
             wheel-${{ matrix.python-version }}-
 
+      - name: Debug cache status
+        run: |
+          echo "Cache hit status: ${{ steps.cache-wheel.outputs.cache-hit }}"
+          echo "Cache key: wheel-${{ matrix.python-version }}-${{ hashFiles('setup.py') }}"
+          echo "Cache hit value type: $(echo ${{ steps.cache-wheel.outputs.cache-hit }} | xxd)"
+          ls -la dist/ || true
+
       - name: Setup Miniconda
-        if: steps.cache-wheel.outputs.cache-hit != 'true'
+        if: ${{ steps.cache-wheel.outputs.cache-hit != 'true' }}
         uses: conda-incubator/setup-miniconda@v3
         with:
           python-version: ${{ matrix.python-version }}
@@ -69,7 +76,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install build dependencies
-        if: steps.cache-wheel.outputs.cache-hit != 'true'
+        if: ${{ steps.cache-wheel.outputs.cache-hit != 'true' }}
         run: |
           set -x
           if [ "${{ inputs.llvmdev_run_id }}" != "" ]; then
@@ -80,11 +87,11 @@ jobs:
           conda install -c "$CHAN" llvmdev=${{ env.FALLBACK_LLVMDEV_VERSION }} cmake libxml2 python-build
       
       - name: Build wheel
-        if: steps.cache-wheel.outputs.cache-hit != 'true'
+        if: ${{ steps.cache-wheel.outputs.cache-hit != 'true' }}
         run: python -m build
 
       - name: Fix macOS wheel library paths
-        if: steps.cache-wheel.outputs.cache-hit != 'true'
+        if: ${{ steps.cache-wheel.outputs.cache-hit != 'true' }}
         run: |
           cd dist
           # Get the most recent wheel
@@ -222,23 +229,27 @@ jobs:
 
       - name: Install and test
         run: |
+          # Get the Python executable path
+          PYTHON_PATH=$(which python${{ matrix.python-version }})
+          echo "Using Python at: $PYTHON_PATH"
+          
           # Upgrade pip and install wheel
-          python -m pip install --upgrade pip wheel
+          $PYTHON_PATH -m pip install --upgrade pip wheel
 
           # Remove ABI tag and update platform tag from wheel
           cd dist
           whl=$(ls -t *.whl | head -n 1)
           echo "Processing wheel: $whl"
           
-          # Remove all ABI tags and update platform tag
-          python -m wheel tags --remove --abi-tag=none --platform-tag=macosx_13_0_x86_64 "$whl"
+          # Remove all ABI tags and update platform tag to macosx_10_15_x86_64
+          $PYTHON_PATH -m wheel tags --remove --abi-tag=none --platform-tag=macosx_10_15_x86_64 "$whl"
           
           # Get the new wheel filename after tag removal
           new_whl=$(ls -t *.whl | head -n 1)
           echo "=== Wheel tags after removal ==="
-          python -m wheel tags "$new_whl"
+          $PYTHON_PATH -m wheel tags "$new_whl"
 
           # Install wheel and run tests
-          python -m pip install -v "$new_whl"
-          python -c "import llvmlite.binding as llvm; print(f'LLVM version: {llvm.get_version()}')"
-          python -m llvmlite.tests
+          $PYTHON_PATH -m pip install -v "$new_whl"
+          $PYTHON_PATH -c "import llvmlite.binding as llvm; print(f'LLVM version: {llvm.get_version()}')"
+          $PYTHON_PATH -m llvmlite.tests
