--- a/.github/workflows/llvmlite_osx-64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_osx-64_wheel_builder.yml
@@ -112,7 +112,7 @@ jobs:
           echo "=== BEFORE ==="
           otool -L "$target"
           
-          # Fix all @rpath libraries
+          # Fix all library paths to use absolute paths
           install_name_tool -change "@rpath/libz.1.dylib" "/usr/lib/libz.1.dylib" "$target"
           install_name_tool -change "@rpath/libc++.1.dylib" "/usr/lib/libc++.1.dylib" "$target"
           install_name_tool -change "@rpath/libunwind.1.dylib" "/usr/lib/libunwind.1.dylib" "$target"
@@ -252,8 +252,13 @@ jobs:
           $PYTHON_PATH -m pip install -v "$new_whl"
           
           # Set up environment variables for LLVM
-          export DYLD_LIBRARY_PATH="/usr/local/lib:$DYLD_LIBRARY_PATH"
-          export DYLD_FALLBACK_LIBRARY_PATH="/usr/local/lib:/usr/lib:$DYLD_FALLBACK_LIBRARY_PATH"
+          export DYLD_LIBRARY_PATH="/usr/local/lib:/usr/lib:/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/lib:$DYLD_LIBRARY_PATH"
+          export DYLD_FALLBACK_LIBRARY_PATH="/usr/local/lib:/usr/lib:/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/lib:$DYLD_FALLBACK_LIBRARY_PATH"
+          
+          # Print environment for debugging
+          echo "=== Environment variables ==="
+          echo "DYLD_LIBRARY_PATH: $DYLD_LIBRARY_PATH"
+          echo "DYLD_FALLBACK_LIBRARY_PATH: $DYLD_FALLBACK_LIBRARY_PATH"
           
           # Print library paths for debugging
           echo "=== Library paths ==="
