--- a/.github/workflows/llvmlite_osx-64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_osx-64_wheel_builder.yml
@@ -57,6 +57,9 @@ jobs:
           repository: ${{ github.repository }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Show Available SDKs
+        run: xcodebuild -showsdks
+
       - name: Install build dependencies
         run: |
           set -x
