add conditional check for llvmdev_run_id before downloading artifact

--- a/.github/workflows/llvmlite_osx-64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_osx-64_wheel_builder.yml
@@ -49,6 +49,7 @@ jobs:
           auto-activate-base: true
 
       - name: Download llvmdev Artifact
+        if: ${{ inputs.llvmdev_run_id != '' }}
         uses: actions/download-artifact@v4
         with:
           name: llvmdev_osx-64
