--- a/.github/workflows/llvmlite_osx-64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_osx-64_wheel_builder.yml
@@ -48,8 +48,15 @@ jobs:
           echo "--- Active Xcode Path (Current Selection) ---"
           xcode-select -p
           ls -l /Library/Developer/CommandLineTools/SDKs
+          xcrun --sdk macosx --show-sdk-path
           
-      
+      - name: Show Available Toolchains
+        run: |
+          echo "--- System Toolchains (/Library/Developer/Toolchains) ---"
+          ls /Library/Developer/Toolchains || echo "[Info] No toolchains found in /Library/Developer/Toolchains"
+          echo "--- User Toolchains (~/Library/Developer/Toolchains) ---"
+          ls ~/Library/Developer/Toolchains 2>/dev/null || echo "[Info] No toolchains found in ~/Library/Developer/Toolchains"
+        
       - name: Setup Miniconda
         uses: conda-incubator/setup-miniconda@v3
         with:
