add llvmlite osx-64 conda builder workflow, update conda build config on recipe to point downloaded recipe

--- a/conda-recipes/llvmlite/conda_build_config.yaml
+++ b/conda-recipes/llvmlite/conda_build_config.yaml
@@ -15,3 +15,6 @@ c_compiler:              # [win]
   - vs2019               # [win]
 cxx_compiler:            # [win]
   - vs2019               # [win]
+
+CONDA_BUILD_SYSROOT:
+  - /opt/MacOSX10.10.sdk        # [osx and x86_64]
