--- a/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
@@ -67,6 +67,10 @@ jobs:
           fi
           conda install -c "$CHAN" llvmdev=${{ env.FALLBACK_LLVMDEV_VERSION }} cmake libxml2 python-build
 
+      # Add this temporary step to list Xcode versions
+      - name: List Available Xcode Versions
+        run: ls /Applications | grep Xcode
+
       - name: Build wheel
         env:
           MACOSX_DEPLOYMENT_TARGET: "13.0"
