update debug runners workflow to trigger on pull requests for changes to the workflow file

--- a/.github/workflows/debug_runners.yml
+++ b/.github/workflows/debug_runners.yml
@@ -1,7 +1,9 @@
 name: Debug Runners
 
 on:
-  workflow_dispatch:
+  pull_request:
+    paths:
+      - .github/workflows/debug_runners.yml
 
 jobs:
   debug:
