--- a/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
@@ -40,6 +40,10 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup platform-specific requirements
+        run: |
+          source ./buildscripts/github/setup_platform.sh "osx-arm64"
+
       - name: Setup Miniconda
         uses: conda-incubator/setup-miniconda@v3
         with:
